# ControlSoftware

./: .gitignore  Brooks0254_BuildUp.py  ControlWindow.py  Control_Parameters.py  Control_TopDown.py  Control_TopDown_v1.py  DAQ_BuildUp.py  DummyPressureThread.py  Instruments.py  Lakeshore335.py  Lakeshore_BuildUp.py  Plots.py  PressureGauge.py  PressureGauge_BuildUp.py  SetupTab.py  SimpleControlWindow.py  Threads.py  hello.py  misc_helpers.py  plot_tube_furnace_log.py  process_video.py  pyproject.toml  pyqtgraph_widget_example.py  requirements.txt  widget_example.py
