[project]
name = "controlsoftware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argcomplete==3.5.3",
    "asttokens==2.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "distlib==0.3.9",
    "executing==2.1.0",
    "filelock==3.16.1",
    "fonttools==4.53.1",
    "future==1.0.0",
    "ipykernel==6.29.5",
    "ipython==8.27.0",
    "iso8601==2.1.0",
    "jedi==0.19.1",
    "jupyter-client==8.6.2",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "lakeshore>=1.9.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "nidaqmx>=1.3.0",
    "numpy==2.1.1",
    "packaging==24.1",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pillow==10.4.0",
    "pipx==1.7.1",
    "platformdirs==4.2.2",
    "plotly==5.24.0",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "pyparsing==3.1.4",
    "pyqt5>=5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pyqtgraph>=0.14.0",
    "pyserial==3.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyvisa>=1.15.0",
    "pywin32==306",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "qdarkstyle>=3.2.3",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tenacity==9.0.0",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "tzdata==2024.1",
    "userpath==1.9.2",
    "virtualenv==20.28.1",
    "wcwidth==0.2.13",
]
